--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
      }
   });
  /*
-  * background color change*/
+  * header nav background color change*/
   
 
        $('button').on('click',function(){
