--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <a href="9"><li>Privacy Policy</li></a>
     <a href="5"><li>Terms of Use</li></a>
   </ul>
-  <a href="10" class="back-to-top d-flex align-items-center justify-content-center active"><i class="bi bi-caret-up-square"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center active"><i class="bi bi-caret-up-square"></i></a>
 </div>
 </footer>
 <script>
